<resources>
    <string name="app_name">McDermott</string>
    <string name="terms_text">I agree with Terms of Usage</string>
    <string name="terms_usage">Terms of Usage</string>
    <string name="market_inter">Market Intelligence Dashboard</string>
    <string name="web_url">https://www.zdaly.com/home/termsAndCondition</string>
    <string name="get_info">Getting info...</string>
    <string name="alert_terms_title">Warning</string>
    <string name="alert_terms_message">You need to agree with Zdaly terms of usage in order to login</string>
    <string name="string_ok">OK</string>
    <string name="dashboard_title">Market Intelligence Dashboard</string>
    <string name="daily_news">Daily News</string>
    <string name="key_trends">Key Trends</string>
    <string name="spot_prices">Spot Prices</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="alert_login_message">Login failed and try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_result">Sorry! No search result found.</string>
    <string name="search_no_share_selected">Please select atleast one news to share.</string>
    <string name="title_activity_maps">Map</string>
</resources>
