<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zdalyapp.mayah.dashboard.DashboardActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/dashboard_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/top_logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.05"
            />
        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_gravity="fill_vertical"
            android:text="@string/daily_news"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textSize="10sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1"
            />
        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/key_trends"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_gravity="fill_vertical"
            android:textSize="10sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1"
            />
        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_weight="1"
            android:layout_gravity="fill_vertical"
            android:text="@string/spot_prices"
            android:textSize="10sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1"
            />
        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:text="@string/weather_forecast"
            android:textSize="10sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.05"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/mainFrame"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>
